Corrected an alignment/margin issue smaller screens

--- a/css/_page.scss
+++ b/css/_page.scss
@@ -65,6 +65,6 @@ svg.one-em {
 
 @media screen and (max-width: $mobile-breakpoint - $one-px) {
   .page {
-    margin-top: $mobile-nav-height+1em;
+    margin: $nav-height+1em 1em 1em;
   }
 }
